build: initial commit

--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,7 @@
 {
-  "sourceType": "unambiguous",
-  "presets": [
-    "@babel/preset-typescript",
-    "@babel/preset-react"
-  ],
-  "plugins": []
+    "sourceType": "unambiguous",
+    "presets": [
+        "@babel/preset-typescript"
+    ],
+    "plugins": []
 }
