--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,8 @@
 {
-    "extends": ["@gravity-ui/eslint-config", "@gravity-ui/eslint-config/prettier"],
+    "extends": [
+        "@gravity-ui/eslint-config",
+        "@gravity-ui/eslint-config/prettier"
+    ],
     "root": true,
     "env": {
         "node": true,
