--- a/package.json
+++ b/package.json
@@ -1,71 +1,59 @@
 {
-  "name": "@gravity-ui/package-example",
+  "name": "openapi-extension",
   "version": "0.0.1",
-  "description": "",
+  "description": "OpenAPI extension for expresskit package",
   "license": "MIT",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
+  "keywords": [
+    "expresskit",
+    "openapi"
+  ],
+  "author": {
+    "name": "Anton Fomichev",
+    "email": "av.fomichev01@yandex.ru",
+    "url": "https://github.com/anton-fomichev"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gravity-ui/package-example.git"
+    "url": "git+https://github.com/anton-fomichev/openapi-extension.git"
   },
   "bugs": {
-    "url": "https://github.com/gravity-ui/package-example/issues"
+    "url": "https://github.com/anton-fomichev/openapi-extension/issues"
   },
-  "homepage": "https://github.com/gravity-ui/package-example#readme",
+  "homepage": "https://github.com/anton-fomichev/openapi-extension#readme",
   "scripts": {
     "prepare": "husky",
-    "lint:js": "eslint --ext .js,.jsx,.ts,.tsx .",
-    "lint:styles": "stylelint 'src/**/*.scss'",
+    "lint:js": "eslint --ext .js,.ts.",
     "lint": "run-p lint:*",
     "typecheck": "tsc --noEmit",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "build": "tsc",
-    "start": "TS_NODE_PROJECT=.storybook/tsconfig.json storybook dev",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "watch": "tsc -w"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.0.3",
-    "@commitlint/config-conventional": "^19.0.3",
-    "@gravity-ui/eslint-config": "^3.1.1",
+    "@babel/preset-typescript": "^7.24.7",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "@gravity-ui/eslint-config": "^3.2.0",
     "@gravity-ui/prettier-config": "^1.1.0",
-    "@gravity-ui/stylelint-config": "^4.0.1",
     "@gravity-ui/tsconfig": "^1.0.0",
-    "@storybook/addon-essentials": "^8.0.0",
-    "@storybook/addon-webpack5-compiler-babel": "^3.0.3",
-    "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^8.0.0",
-    "@storybook/react-webpack5": "^8.0.0",
-    "@types/jest": "^29.5.12",
-    "@types/react": "^18.2.64",
-    "@types/react-dom": "^18.2.21",
-    "eslint": "^8.57.0",
-    "husky": "^9.0.11",
+    "@types/jest": "^29.5.13",
+    "eslint": "^8.57.1",
+    "husky": "^9.1.6",
     "jest": "^29.7.0",
     "nano-staged": "^0.8.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.2.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sass": "^1.71.1",
-    "sass-loader": "^14.1.1",
-    "storybook": "^8.0.0",
-    "style-loader": "^3.3.4",
-    "stylelint": "^15.11.0",
-    "ts-jest": "^29.1.2",
-    "typescript": "^5.4.2"
-  },
-  "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "prettier": "^3.3.3",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.6.2"
   },
   "nano-staged": {
-    "*.{scss}": [
-      "stylelint --fix --quiet"
-    ],
-    "*.{js,jsx,ts,tsx}": [
+    "*.{js,ts}": [
       "eslint --fix --quiet"
     ],
     "*.md": [
