--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,16 +4,13 @@
     "declaration": true,
     "resolveJsonModule": true,
     "outDir": "dist",
-    "module": "esnext",
-    "jsx": "react"
+    "module": "esnext"
   },
   "include": [
     "src/**/*.ts",
-    "src/**/*.tsx"
   ],
   "exclude": [
     "**/__tests__",
     "**/*.test.ts",
-    "**/*.test.tsx",
   ]
 }
