chore: add linting rules and change tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "declaration": true,
     "resolveJsonModule": true,
     "outDir": "dist",
-    "module": "esnext"
+    "module": "CommonJS"
   },
   "include": [
     "src/**/*.ts",
