--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,26 @@
 {
     "extends": [
         "@gravity-ui/eslint-config",
-        "@gravity-ui/eslint-config/prettier"
+        "@gravity-ui/eslint-config/server",
+        "@gravity-ui/eslint-config/prettier",
+        "@gravity-ui/eslint-config/import-order"
     ],
     "root": true,
     "env": {
         "node": true,
         "jest": true
+    },
+    "ignorePatterns": [
+        "node_modules",
+        "dist"
+    ],
+    "rules": {
+        "lines-between-class-members": [
+            "error",
+            "always",
+            {
+                "exceptAfterSingleLine": true
+            }
+        ]
     }
 }
