--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@gravity-ui/eslint-config": "^3.2.0",
+    "@gravity-ui/expresskit": "^1.4.0",
     "@gravity-ui/prettier-config": "^1.1.0",
     "@gravity-ui/tsconfig": "^1.0.0",
     "@types/jest": "^29.5.13",
+    "@types/js-yaml": "^4.0.9",
     "eslint": "^8.57.1",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
@@ -51,6 +53,10 @@
     "prettier": "^3.3.3",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "js-yaml": "^4.1.0",
+    "openapi-types": "^12.1.3"
   },
   "nano-staged": {
     "*.{js,ts}": [
